--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/yuniruyuni/mrdamian-plugin-youtube/README.md",
   "repository": "https://github.com/yuniruyuni/mrdamian-plugin-youtube",
   "bugs": "https://github.com/yuniruyuni/mrdamian-plugin-youtube/issues",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": {
     "name": "yuniruyuni",
     "email": "yuniruyuni@gmail.com"
@@ -29,7 +29,7 @@
     "type": "tsc --noEmit"
   },
   "dependencies": {
-    "mrdamian": "^0.0.3"
+    "mrdamian-plugin": "^0.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.1",
